--- a/intro.html
+++ b/intro.html
@@ -16,16 +16,59 @@
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             min-height: 100vh;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             overflow: hidden;
         }
 
-        /* 배경 애니메이션 */
-        @keyframes gradientShift {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
+        /* 네비게이션 바 */
+        nav {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            background: rgba(0, 0, 0, 0.2);
+            backdrop-filter: blur(10px);
+            padding: 15px 30px;
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+            z-index: 1000;
+            animation: slideDownNav 0.6s ease-out;
+        }
+
+        @keyframes slideDownNav {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            font-weight: 600;
+            padding: 8px 16px;
+            border-radius: 20px;
+            transition: all 0.3s ease;
+            border: 2px solid transparent;
+        }
+
+        nav a:hover {
+            background: rgba(255, 255, 255, 0.2);
+            border: 2px solid white;
+            transform: scale(1.05);
+        }
+
+        nav a.active {
+            background: white;
+            color: #667eea;
+            border: 2px solid white;
         }
 
         .container {
@@ -37,6 +80,7 @@
             width: 90%;
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
             animation: slideUp 0.8s ease-out;
+            margin-top: 60px;
         }
 
         @keyframes slideUp {
@@ -250,6 +294,12 @@
     </style>
 </head>
 <body>
+    <nav>
+        <a href="README.md" target="_blank">📄 README</a>
+        <a href="intro.html" class="active">🌟 자기소개</a>
+        <a href="portfolio.html">🎨 포트폴리오</a>
+    </nav>
+
     <div class="container">
         <h1 class="title">👋 안녕하세요!</h1>
         
